# signal-auditor

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE.md  README.md  build.rs  config.yaml  kt_test_vectors.pb
.github/workflows/: release-please.yaml  rust.yaml
benches/: audit.rs
docs/: gcp_ops_example.conf
proto/: key_transparency.proto  transparency.proto  vectors.proto
src/: auditor.rs  client.rs  lib.rs  main.rs  storage.rs  transparency.pb
src/auditor/: kms.rs  local.rs  mod.rs
src/log/: mod.rs
src/prefix/: mod.rs
src/storage/: filestore.rs  gcp.rs
src/transparency/: mod.rs
test/: vectors.proto
tests/: kt_test_vectors.pb  vectors.rs
