[package]
name = "signal-auditor"
version = "0.1.0"
edition = "2024"
description = "An implementation of the Third-Party Auditor role for the Signal Key Transparency Log."
license = "AGPL-3.0-only"
repository = "https://github.com/trailofbits/signal-transparency"
keywords = ["signal", "key-transparency", "merkle-tree"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
crypto-common = "0.1.6"
ed25519-dalek = { version = "2.2.0", features = ["asm", "pkcs8", "pem"] }
sha2 = { version = "0.10.9", features = ["asm", "asm-aarch64", "sha2-asm"] }
tonic = { version = "0.13", features = ["tls-aws-lc", "channel", "tls-webpki-roots"] }
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
config = "0.15.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.98"
serde_cbor = "0.11.2"
google-cloud-storage = { package = "gcloud-storage",version = "1.1.0", optional = true }
hex = { version = "0.4.3", optional = true }
serde_bytes = "0.11.17"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-stackdriver = { version = "0.10.0", optional = true }
hmac = "0.12.1"
hkdf = "0.12.4"
clap = { version = "4.4", features = ["derive"] }
gcloud-kms = { version = "1.2.1", optional = true }


[build-dependencies]
tonic-build = "0.13.1"


[dev-dependencies]
aes = "0.8.4"
hex = "0.4.3"
hex-literal = "1.0.0"
lazy_static = "1.5.0"
criterion = { version = "0.7", features = ["html_reports"] }
rand = "0.9.2"

[[bench]]
name = "audit"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[features]
storage-gcp = ["google-cloud-storage", "hex"]
kms-gcp = ["gcloud-kms"]
stackdriver = ["tracing-stackdriver"]
gcp = ["stackdriver", "storage-gcp", "kms-gcp"]
default = []
